[metadata]
name = codes
version = 1.0.0
license = GPL-3.0
description = Python package with classic encryption algorithms
long_description = file: README.md
classifiers = Development Status :: 5 - Production/Stable

[options]
packages = find:
package_dir =
        = src
include_package_data = True

[options.packages.find]
where = src
